Added error pages

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,13 @@
             {% endfor %}
         </p>
         <p>{{ form.submit() }}</p>
-    </form>
-    <br>
-
+    </form><br>
+    <div class="container">
+        <a href="http://github.com/capnchamomile">Steeped by Chamomile</a>
+    </div>
+    <div class="container">
+        <a class="container" href="http://dgcoursereview.com">
+            <img src="https://www.dgcoursereview.com/api/images/powered_by_dgcr.png" alt="DGCourseReview.com">
+        </a>
+    </div>
 {% endblock %}
