--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -4,4 +4,5 @@
     <h1>GRIPLOCK'D</h1><br>
     <p>An unexpected error has occured. The administrator has been notified. We're sorry for the inconvenience.</p>
     <p><a href="{{ url_for('index') }}">Wanna try again?</a></p>
+    <iframe width="420" height="315" src="https://www.youtube.com/embed/UBQP9gEldRk?autoplay=1"></iframe>
 {% endblock %}
