fixed ampserand parser to use built-in jinja safe filter

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,7 +21,7 @@
         <p>{{ form.submit() }}</p>
     </form><br>
     <div class="container">
-        <a href="http://github.com/capnchamomile">Steeped by Chamomile</a>
+        <a href="http://github.com/capnchamomile" alt="Check my Github">Steeped by Chamomile</a>
     </div>
     <div class="container">
         <a class="container" href="http://dgcoursereview.com">
