--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-    <h1>"What color was it?"</h1>
+    <h1>404: File not found</h1>
     <img src="http://www.frisbee.net/images/20130225005203_fn1443.jpg">
-    <h3>Error 404: Page not found</h3>
+    <h3>"What color was it?"</h3>
     <p><a href="{{ url_for('index') }}">Back to Home</a></p>
 {% endblock %}
